Created health service and endpoints to query in other services with updated openapi
