# processing/openapi.yml
@@ -36,6 +36,24 @@ paths:
                 properties:
                   message:
                     type: string
+  /health:
+    get:
+      tags:
+        - devices
+      summary: Returns the health of the system (running or not running)
+      operationId: app.getHealth
+      description: Returns the health of the system
+      responses:
+        '200':
+          description: Successfully returned a status of service (processing)
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: "#/components/schemas/healthObj"
+        "400":
+          description: "not running"
 components:
   schemas:
     readingStats:
@@ -84,3 +102,10 @@ components:
         maxWeightLost:
           type: integer
           example: 84
+    healthObj:
+      required:
+        - processing
+      properties:
+        reciever:
+          type: string
+          example: "running"
