# reciever/app.py
@@ -63,6 +63,10 @@ def addWeightInfo(body):
 
     return NoContent, 201
 
+def getHealth():
+    """Returns the health of the system"""
+    return {"reciever": "running"}, 200
+
 
 app = connexion.FlaskApp(__name__, specification_dir="")
 app.add_api("openapi.yml", strict_validation=True, validate_responses=True)
