# storage/app.py
@@ -146,6 +146,10 @@ def process_messages():
         # Commit the new message as being read
         consumer.commit_offsets()
 
+def getHealth():
+    """Returns the health of the system"""
+    return {"storage": "running"}, 200
+
 app = connexion.FlaskApp(__name__, specification_dir="")
 app.add_api("openapi.yml", strict_validation=True, validate_responses=True)
 
